# EN-skeleton

./: .env.sample  README.md  build.sh  dev-setup.sh  docker-compose.yml
backend/: Dockerfile  config.py  main.py  pipeline.py  pyproject.toml  router.py
backend/api/: time_serie.py
frontend/: Dockerfile  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/.svelte-kit/dev/components/: error.svelte
frontend/.svelte-kit/dev/runtime/: env.js  paths.js
frontend/.svelte-kit/dev/runtime/app/: env.js  navigation.js  stores.js
frontend/.svelte-kit/dev/runtime/chunks/: utils.js
frontend/.svelte-kit/dev/runtime/internal/: singletons.js  start.js
frontend/src/: app.css  app.html
frontend/src/lib/: Select.svelte  utils.js
frontend/src/lib/plots/: Lineplot.svelte  Scorecard.svelte
frontend/src/routes/: __layout.svelte  index.svelte
frontend/src/store/: filters.js
frontend/src/styles/: variables.scss
