[tool.poetry]
name = "canotify-api"
version = "0.1.0"
description = ""
authors = ["Manas.Tech <hello@manas.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.2"}
aiofiles = "^0.7.0"
APScheduler = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
